Finished all mock data

--- a/code/gradle.properties
+++ b/code/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+SPOONACULAR_API_KEY=be3cba944e0d490fa4be084a83bf8c77
+
